--- a/res/values/strings_bg.arb
+++ b/res/values/strings_bg.arb
@@ -355,6 +355,7 @@
   "event": "Събитие",
   "events": "събития",
   "exchange": "Обмен",
+  "exchange_extra_info": "Моля, не забравяйте да посочите бележката или допълнителен лична карта, докато изпращате тази транзакция за борсата",
   "exchange_incorrect_current_wallet_for_xmr": "Ако искате да смените XMR от вашия баланс на портфейла на тортата Monero, моля, преминете първо към вашия портфейл Monero.",
   "exchange_new_template": "Нов шаблон",
   "exchange_provider_unsupported": "${providerName} вече не се поддържа!",
@@ -417,7 +418,6 @@
   "group_by_type": "Група по вид",
   "haven_app": "Haven от Cake Wallet",
   "haven_app_wallet_text": "Невероятен портфейл за Haven",
-  "hbar_extra_info": "Моля, не забравяйте да посочите идентификационния номер на бележката, докато изпращате HBAR транзакцията за борсата",
   "help": "Помощ",
   "hidden_addresses": "Скрити адреси",
   "hidden_balance": "Скрит баланс",
@@ -709,7 +709,6 @@
   "restore_wallet_restore_description": "Описание на възстановяване на портфейл",
   "robinhood_option_description": "Купете и прехвърлете незабавно с помощта на вашата дебитна карта, банкова сметка или салдо на робини. Само САЩ.",
   "router_no_route": "Няма дефиниран път за ${name}",
-  "rune_extra_info": "Моля, не забравяйте да посочите идентификационния номер на бележката, докато изпращате транзакцията Rune за борсата",
   "save": "Запази",
   "save_backup_password": "Моля, запишете своята парола за възстановяване. Импортирането на резервни копия не е възможно без нея.",
   "save_backup_password_alert": "Запазване на паролата за възстановяване",
@@ -719,7 +718,6 @@
   "scan_qr_code": "Сканирайте QR кода, за да получите адреса",
   "scan_qr_code_to_get_address": "Сканирайте QR кода, за да получите адреса",
   "scan_qr_on_device": "Сканирайте този QR код на друго устройство",
-  "scrt_extra_info": "Моля, не забравяйте да посочите идентификационния номер на бележката, докато изпращате SCRT транзакцията за борсата",
   "search": "Търсене",
   "search_add_token": "Търсене/Добавяне на токен",
   "search_category": "Търсене в категория",
@@ -933,7 +931,6 @@
   "token_name": "Име на токена, напр.: Tether",
   "token_symbol": "Символ на токена, напр.: USDT",
   "tokenID": "документ за самоличност",
-  "ton_extra_info": "Моля, не забравяйте да посочите идентификационния номер на бележката, докато изпращате транзакцията TON за борсата",
   "tor_connection": "Tor връзка",
   "tor_connection_timeout": "TOR ВРЕМЕ НА ВРЕМЕТО ВРЕМЕ",
   "tor_experimental": "Това е експериментална функция, не всички връзки, направени от маршрутизиране на тортата за портфейл за торта - някои връзки могат да използват ClearNet, за да се насочи напълно да използва трафик на приложения TOR с VPN режим.",
@@ -1105,13 +1102,11 @@
   "widgets_seed": "Seed",
   "wouoldLikeToConnect": "иска да се свърже",
   "write_down_backup_password": "Моля, запишете своята парола за възстановяване. Тя се използва за импортиране на резервни копия на Вашите файлове.",
-  "xlm_extra_info": "Не забравяйте да дадете Memo ID-то, докато изпращате XLM транзакцията за обмена",
   "xmr_available_balance": "Наличен баланс",
   "xmr_full_balance": "Пълен баланс",
   "xmr_hidden": "Скрит",
   "xmr_to_error": "XMR.TO грешка",
   "xmr_to_error_description": "Невалидна сума - най-много 8 цифри след десетичната запетая",
-  "xrp_extra_info": "Не забравяйте да дадете Destination Tag-а, когато изпращате XRP транзакцията за обмена",
   "yat": "Yat",
   "yat_address": "Yat Адрес",
   "yat_alert_content": "Потребителите на Cake Wallet вече могат да изпращат и получават любимите си валути чрез неповторимо потребителско име от емоджита.",
