--- a/res/values/strings_cs.arb
+++ b/res/values/strings_cs.arb
@@ -355,6 +355,7 @@
   "event": "událost",
   "events": "Události",
   "exchange": "Výměna",
+  "exchange_extra_info": "Při odesílání této transakce na burzu prosím nezapomeňte zadat poznámku nebo další ID",
   "exchange_incorrect_current_wallet_for_xmr": "Pokud chcete vyměnit XMR z vaší dortové peněženky Monero Balance, nejprve přepněte na peněženku Monero.",
   "exchange_new_template": "Nová šablona",
   "exchange_provider_unsupported": "${providerName} již není podporováno!",
@@ -417,7 +418,6 @@
   "group_by_type": "Skupina podle typu",
   "haven_app": "Haven od Cake Wallet",
   "haven_app_wallet_text": "Úžasná peněženka pro Haven",
-  "hbar_extra_info": "Při odeslání transakce HBAR pro výměnu nezapomeňte zadat ID Memo ID",
   "help": "pomoc",
   "hidden_addresses": "Skryté adresy",
   "hidden_balance": "Skrytý zůstatek",
@@ -709,7 +709,6 @@
   "restore_wallet_restore_description": "Popis obnovení peněženky",
   "robinhood_option_description": "Nakupujte a převádějte okamžitě pomocí své debetní karty, bankovního účtu nebo zůstatku Robinhood. Pouze USA.",
   "router_no_route": "Pro ${name} není definována žádná cesta",
-  "rune_extra_info": "Při odeslání transakce Rune na burzu nezapomeňte určit ID Memo ID",
   "save": "Uložit",
   "save_backup_password": "Prosím ujistěte se, že máte uschováno heslo pro zálohy. Bez něj nebudete moci naimportovat soubory se zálohami.",
   "save_backup_password_alert": "Uložit heslo pro zálohy",
@@ -719,7 +718,6 @@
   "scan_qr_code": "Naskenujte QR kód pro získání adresy",
   "scan_qr_code_to_get_address": "Prohledejte QR kód a získejte adresu",
   "scan_qr_on_device": "Naskenujte tento QR kód na jiném zařízení",
-  "scrt_extra_info": "Při odeslání transakce SCRT na burzu",
   "search": "Hledat",
   "search_add_token": "Hledat / Přidat token",
   "search_category": "Hledat kategorii",
@@ -933,7 +931,6 @@
   "token_name": "Název tokenu např.: Tether",
   "token_symbol": "Symbol tokenu, např.: USDT",
   "tokenID": "ID",
-  "ton_extra_info": "Při odeslání TON transakce pro výměnu nezapomeňte zadat ID Memo ID",
   "tor_connection": "Připojení Tor",
   "tor_connection_timeout": "Časový limit připojení",
   "tor_experimental": "Jedná se o experimentální funkci, ne všechna připojení vyrobená z podpory dortů na dort Tor - některá připojení mohou používat ClearNet, aby se plně směrovaly používání provozu aplikací s režimem VPN.",
@@ -1105,13 +1102,11 @@
   "widgets_seed": "Seed",
   "wouoldLikeToConnect": "by se chtělo připojit",
   "write_down_backup_password": "Prosím zapište si své heslo pro zálohy, které se používá pro import vašich souborů se zálohami.",
-  "xlm_extra_info": "Prosím nezapomeňte zadat Memo ID, když posíláte XLM transakce ke směně",
   "xmr_available_balance": "Zůstatek (dostupný)",
   "xmr_full_balance": "Zůstatek (celkový)",
   "xmr_hidden": "Skryto",
   "xmr_to_error": "XMR.TO chyba",
   "xmr_to_error_description": "Neplatná částka. Maximálně lze použít 8 desetinných míst",
-  "xrp_extra_info": "Prosím nezapomeňte zadat Destination Tag, když posíláte XRP transakce ke směně",
   "yat": "Yat",
   "yat_address": "Yat adresa",
   "yat_alert_content": "Uživatelé Cake Wallet mohou nyní posílat a přijímat všechny své oblíbené měny pomocí něco jako uživatelského jména tvořeného emoji.",
