--- a/res/values/strings_en.arb
+++ b/res/values/strings_en.arb
@@ -355,6 +355,7 @@
   "event": "Event",
   "events": "Events",
   "exchange": "Exchange",
+  "exchange_extra_info": "Please don’t forget to specify the Memo or Extra ID while sending this transaction for the exchange",
   "exchange_incorrect_current_wallet_for_xmr": "If you want to swap XMR from your Cake Wallet Monero balance, please switch to your Monero wallet first.",
   "exchange_new_template": "New template",
   "exchange_provider_unsupported": "${providerName} is no longer supported!",
@@ -417,7 +418,6 @@
   "group_by_type": "Group by type",
   "haven_app": "Haven by Cake Wallet",
   "haven_app_wallet_text": "Awesome wallet for Haven",
-  "hbar_extra_info": "Please don’t forget to specify the Memo ID while sending the HBAR transaction for the exchange",
   "help": "help",
   "hidden_addresses": "Hidden Addresses",
   "hidden_balance": "Hidden Balance",
@@ -710,7 +710,6 @@
   "restore_wallet_restore_description": "Wallet restore description",
   "robinhood_option_description": "Buy and transfer instantly using your debit card, bank account, or Robinhood balance. USA only.",
   "router_no_route": "No route defined for ${name}",
-  "rune_extra_info": "Please don’t forget to specify the Memo ID while sending the RUNE transaction for the exchange",
   "save": "Save",
   "save_backup_password": "Please make sure that you have saved your backup password.  You will not be able to import your backup files without it.",
   "save_backup_password_alert": "Save backup password",
@@ -720,7 +719,6 @@
   "scan_qr_code": "Scan QR code",
   "scan_qr_code_to_get_address": "Scan the QR code to get the address",
   "scan_qr_on_device": "Scan this QR code on another device",
-  "scrt_extra_info": "Please don’t forget to specify the Memo ID while sending the SCRT transaction for the exchange",
   "search": "Search",
   "search_add_token": "Search / Add token",
   "search_category": "Search category",
@@ -934,7 +932,6 @@
   "token_name": "Token name eg: Tether",
   "token_symbol": "Token symbol eg: USDT",
   "tokenID": "ID",
-  "ton_extra_info": "Please don’t forget to specify the Memo ID while sending the TON transaction for the exchange",
   "tor_connection": "Tor connection",
   "tor_connection_timeout": "Tor connection timeout",
   "tor_experimental": "This is an experimental feature, not all connections made from Cake Wallet support Tor routing - some connections may use clearnet, in order to fully route app traffic use Tor with VPN mode.",
@@ -1106,13 +1103,11 @@
   "widgets_seed": "Seed",
   "wouoldLikeToConnect": "would like to connect",
   "write_down_backup_password": "Please write down your backup password, which is used for the import of your backup files.",
-  "xlm_extra_info": "Please don’t forget to specify the Memo ID while sending the XLM transaction for the exchange",
   "xmr_available_balance": "Available Balance",
   "xmr_full_balance": "Full Balance",
   "xmr_hidden": "Hidden",
   "xmr_to_error": "XMR.TO error",
   "xmr_to_error_description": "Invalid amount. Maximum limit 8 digits after the decimal point",
-  "xrp_extra_info": "Please don’t forget to specify the Destination Tag while sending the XRP transaction for the exchange",
   "yat": "Yat",
   "yat_address": "Yat Address",
   "yat_alert_content": "Cake Wallet users can now send and receive all their favorite currencies with a one-of-a-kind emoji-based username.",
