--- a/res/values/strings_es.arb
+++ b/res/values/strings_es.arb
@@ -355,6 +355,7 @@
   "event": "Evento",
   "events": "Eventos",
   "exchange": "Intercambiar",
+  "exchange_extra_info": "No olvide especificar la nota o la identificación adicional al enviar esta transacción para el intercambio",
   "exchange_incorrect_current_wallet_for_xmr": "Si desea intercambiar XMR desde su billetera de pastel Monero Balance, primero cambie a su billetera Monero.",
   "exchange_new_template": "Nueva plantilla",
   "exchange_provider_unsupported": "¡${providerName} ya no es compatible!",
@@ -417,7 +418,6 @@
   "group_by_type": "Grupo por tipo",
   "haven_app": "Haven by Cake Wallet",
   "haven_app_wallet_text": "Increíble billetera para Haven",
-  "hbar_extra_info": "No olvide especificar la ID de memo al enviar la transacción HBAR para el intercambio",
   "help": "ayuda",
   "hidden_addresses": "Direcciones ocultas",
   "hidden_balance": "Balance oculto",
@@ -710,7 +710,6 @@
   "restore_wallet_restore_description": "Restaurar billetera",
   "robinhood_option_description": "Compra y transfiere instantáneamente utilizando su tarjeta de débito, cuenta bancaria o saldo de Robinhood. Solo EE. UU.",
   "router_no_route": "No hay ruta definida para ${name}",
-  "rune_extra_info": "No olvide especificar la ID de memo al enviar la transacción Rune para el intercambio",
   "save": "Guardar",
   "save_backup_password": "Asegúrese de haber guardado su contraseña de respaldo. No podrá importar sus archivos de respaldo sin él.",
   "save_backup_password_alert": "Guardar contraseña de respaldo",
@@ -720,7 +719,6 @@
   "scan_qr_code": "Escanear código QR",
   "scan_qr_code_to_get_address": "Escanea el código QR para obtener la dirección",
   "scan_qr_on_device": "Escanea este código QR en otro dispositivo",
-  "scrt_extra_info": "No olvide especificar la ID de memo al enviar la transacción SCRT para el intercambio",
   "search": "Búsqueda",
   "search_add_token": "Buscar/Agregar token",
   "search_category": "Categoría de búsqueda",
@@ -934,7 +932,6 @@
   "token_name": "Nombre del token, por ejemplo: Tether",
   "token_symbol": "Símbolo de token, por ejemplo: USDT",
   "tokenID": "IDENTIFICACIÓN",
-  "ton_extra_info": "No olvide especificar el ID de memo mientras envía la transacción TON para el intercambio",
   "tor_connection": "conexión tor",
   "tor_connection_timeout": "Tiempo de espera de conexión de Tor",
   "tor_experimental": "Esta es una característica experimental, no todas las conexiones hechas con el enrutamiento de soporte para la billetera de pastel: algunas conexiones pueden usar ClearNet, para enrutar completamente el tráfico de aplicaciones Uso Tor con el modo VPN.",
@@ -1107,13 +1104,11 @@
   "widgets_seed": "Semilla",
   "wouoldLikeToConnect": "quisiera conectar",
   "write_down_backup_password": "Escribe su contraseña de respaldo, que se utiliza para la importación de sus archivos de respaldo.",
-  "xlm_extra_info": "No olvides especificar el ID de nota al enviar la transacción XLM para el intercambio",
   "xmr_available_balance": "Saldo disponible",
   "xmr_full_balance": "Balance total",
   "xmr_hidden": "Oculto",
   "xmr_to_error": "Error de XMR.TO",
   "xmr_to_error_description": "Monto invalido. Límite máximo de 8 dígitos después del punto decimal",
-  "xrp_extra_info": "No olvides especificar la etiqueta de destino al enviar la transacción XRP para el intercambio",
   "yat": "Yat",
   "yat_address": "Dirección de Yat",
   "yat_alert_content": "Los usuarios de Cake Wallet ahora pueden enviar y recibir todas sus monedas favoritas con un nombre de usuario único basado en emoji.",
