--- a/res/values/strings_fr.arb
+++ b/res/values/strings_fr.arb
@@ -355,6 +355,7 @@
   "event": "Événement",
   "events": "Événements",
   "exchange": "Acheter / Vendre",
+  "exchange_extra_info": "N'oubliez pas de spécifier le mémo ou l'identifiant supplémentaire lors de l'envoi de cette transaction pour l'échange",
   "exchange_incorrect_current_wallet_for_xmr": "Si vous souhaitez échanger des XMR depuis le solde Monero de votre Cake Wallet, veuillez d'abord passer à votre portefeuille Monero.",
   "exchange_new_template": "Nouveau modèle d'échange",
   "exchange_provider_unsupported": "${providerName} n'est plus pris en charge !",
@@ -417,7 +418,6 @@
   "group_by_type": "Groupe par type",
   "haven_app": "Haven par Cake Wallet",
   "haven_app_wallet_text": "Super portefeuille (wallet) pour Haven",
-  "hbar_extra_info": "N'oubliez pas de spécifier l'ID de mémo lors de l'envoi de la transaction HBAR pour l'échange",
   "help": "aide",
   "hidden_addresses": "Adresses cachées",
   "hidden_balance": "Solde Caché",
@@ -709,7 +709,6 @@
   "restore_wallet_restore_description": "Description de la restauration de portefeuille (wallet)",
   "robinhood_option_description": "Achetez et transférez instantanément à l'aide de votre carte de débit, de votre compte bancaire ou de votre solde Robinhood. États-Unis seulement.",
   "router_no_route": "Aucune route définie pour ${name}",
-  "rune_extra_info": "N'oubliez pas de spécifier l'ID de mémo lors de l'envoi de la transaction Rune pour l'échange",
   "save": "Sauvegarder",
   "save_backup_password": "Merci de vous assurer d'avoir bien sauvegardé votre mot de passe de sauvegarde.  Vous ne pourrez pas restaurer vos fichiers de sauvegarde sans ce dernier.",
   "save_backup_password_alert": "Enregistrer le mot de passe de sauvegarde",
@@ -719,7 +718,6 @@
   "scan_qr_code": "Scannez le QR code",
   "scan_qr_code_to_get_address": "Scannez le QR code pour obtenir l'adresse",
   "scan_qr_on_device": "Scannez ce code QR sur un autre appareil",
-  "scrt_extra_info": "N'oubliez pas de spécifier l'ID de mémo lors de l'envoi de la transaction SCRT pour l'échange",
   "search": "Chercher",
   "search_add_token": "Rechercher / Ajouter un token",
   "search_category": "Catégorie de recherche",
@@ -933,7 +931,6 @@
   "token_name": "Nom du token, par exemple : Tether",
   "token_symbol": "Symbole de token, par exemple : USDT",
   "tokenID": "IDENTIFIANT",
-  "ton_extra_info": "N'oubliez pas de spécifier l'identification de la note lors de l'envoi de la transaction TON pour l'échange",
   "tor_connection": "Connexion Tor",
   "tor_connection_timeout": "Tor Connection Timeout",
   "tor_experimental": "Il s'agit d'une caractéristique expérimentale, toutes les connexions faites à partir du portefeuille du portefeuille de gâteaux TOR ROUTING - Certaines connexions peuvent utiliser ClearNet, afin d'achever entièrement le trafic d'application Utiliser TOR avec le mode VPN.",
@@ -1105,13 +1102,11 @@
   "widgets_seed": "Phrase secrète (seed)",
   "wouoldLikeToConnect": "je voudrais me connecter",
   "write_down_backup_password": "Merci d'écrire votre mot de passe de sauvegarde, vous en aurez besoin lors de la relecture de vos fichiers de sauvegarde.",
-  "xlm_extra_info": "Merci de ne pas oublier de spécifier l'ID de mémo lors de l'envoi de la transaction XLM de l'échange",
   "xmr_available_balance": "Solde Disponible",
   "xmr_full_balance": "Solde Total",
   "xmr_hidden": "Caché",
   "xmr_to_error": "Erreur XMR.TO",
   "xmr_to_error_description": "Montant invalide. La partie décimale doit contenir au plus 8 chiffres",
-  "xrp_extra_info": "Merci de ne pas oublier de spécifier le tag de destination lors de l'envoi de la transaction XRP de l'échange",
   "yat": "Yat",
   "yat_address": "Adresse Yat",
   "yat_alert_content": "Les utilisateurs de Cake Wallet peuvent maintenant envoyer et recevoir leurs monnaies favorites avec un utilisateur unique en son genre basé sur les emojis.",
