--- a/res/values/strings_ha.arb
+++ b/res/values/strings_ha.arb
@@ -355,6 +355,7 @@
   "event": "Lamarin",
   "events": "Abubuwan da suka faru",
   "exchange": "Canji",
+  "exchange_extra_info": "Don Allah kar a manta su saka memba ko karin ID yayin aika wannan ma'amalar don musayar",
   "exchange_incorrect_current_wallet_for_xmr": "Idan kana son canza XMR daga walat ɗin Bed Wallet ɗinka, da fatan za a canza zuwa walat ɗinku na Monero.",
   "exchange_new_template": "Sabon template",
   "exchange_provider_unsupported": "${providerName}",
@@ -417,7 +418,6 @@
   "group_by_type": "Rukuni ta nau'in",
   "haven_app": "Haven da Cake Wallet",
   "haven_app_wallet_text": "Aikace-aikacen e-wallet ga Haven",
-  "hbar_extra_info": "Don Allah kar a manta su saka ID na Memo yayin aika yarjejeniyar HBAR don musayar",
   "help": "taimako",
   "hidden_addresses": "Adireshin ɓoye",
   "hidden_balance": "BOYE KUDI",
@@ -711,7 +711,6 @@
   "restore_wallet_restore_description": "Bayanin dawo da walat",
   "robinhood_option_description": "Sayi da Canja wurin nan take amfani da katin debit, asusun banki, ko ma'aunin raraki. Amurka kawai.",
   "router_no_route": "Babu wata hanya da aka bayyana don ${name}",
-  "rune_extra_info": "Don Allah kar a manta su saka ID na Memo yayin aika yanayin Rune don musayar",
   "save": "Ajiye",
   "save_backup_password": "Da fatan za a tabbatar cewa kun adana kalmar sirrin ajiyar ku. Ba za ku iya shigo da fayilolin ajiyar ku ba tare da shi ba.",
   "save_backup_password_alert": "Ajiye kalmar sirri ta ajiya",
@@ -721,7 +720,6 @@
   "scan_qr_code": "Gani QR kodin",
   "scan_qr_code_to_get_address": "Duba lambar QR don samun adireshin",
   "scan_qr_on_device": "Duba wannan lambar QR akan wata na'ura",
-  "scrt_extra_info": "Don Allah kar a manta su saka ID na Memo yayin aika yarjejeniyar kungiyar ta musayar",
   "search": "Bincika",
   "search_add_token": "Bincika / Ƙara alama",
   "search_category": "Nemo nau'in",
@@ -935,7 +933,6 @@
   "token_name": "Alamar sunan misali: Tether",
   "token_symbol": "Alamar alama misali: USDT",
   "tokenID": "ID",
-  "ton_extra_info": "Don Allah kar a manta su saka ID na Memo yayin aikawa da ma'amala don musayar",
   "tor_connection": "Tor haɗin gwiwa",
   "tor_connection_timeout": "A lokacin Tor Haɗin",
   "tor_experimental": "Wannan fasalin gwaji ne, ba duk haɗin da aka yi ba daga Wall Wall Wall Walling goyon baya Tor Routing - don cikakken amfani da hanyar zirga-zirga amfani da tor tare da yanayin vpn.",
@@ -1108,13 +1105,11 @@
   "widgets_seed": "iri",
   "wouoldLikeToConnect": "ina son haɗi",
   "write_down_backup_password": "Da fatan za a rubuta kalmar sirrin ajiyar ku, wacce ake amfani da ita don shigo da fayilolin ajiyar ku.",
-  "xlm_extra_info": "Don Allah kar a manta da saka Memo ID yayin aika ma'amalar XLM don musayar",
   "xmr_available_balance": "Akwai Ma'auni",
   "xmr_full_balance": "Cikakken Ma'auni",
   "xmr_hidden": "Boye",
   "xmr_to_error": "XMR.TO kuskure",
   "xmr_to_error_description": "Adadin ba shi da inganci. Maksimum ɗaura 8 digiri bayan decimal point",
-  "xrp_extra_info": "Don Allah kar a manta da saka alamar Ƙaddamarwa yayin aika ma'amalar XRP don musayar",
   "yat": "Yat",
   "yat_address": "Yat Address",
   "yat_alert_content": "Masu amfani da Wallet ɗin Cake yanzu za su iya aikawa da karɓar duk kuɗin da suka fi so tare da sunan mai amfani na tushen emoji iri ɗaya.",
