--- a/res/values/strings_id.arb
+++ b/res/values/strings_id.arb
@@ -355,6 +355,7 @@
   "event": "Peristiwa",
   "events": "Acara",
   "exchange": "Menukarkan",
+  "exchange_extra_info": "Harap jangan lupa untuk menentukan memo atau ID tambahan saat mengirim transaksi ini untuk pertukaran",
   "exchange_incorrect_current_wallet_for_xmr": "Jika Anda ingin bertukar XMR dari Saldo Monero Dompet Kue Anda, silakan beralih ke Monero Wallet Anda terlebih dahulu.",
   "exchange_new_template": "Template baru",
   "exchange_provider_unsupported": "${providerName} tidak lagi didukung!",
@@ -417,7 +418,6 @@
   "group_by_type": "Grup demi jenis",
   "haven_app": "Haven Oleh Cake Wallet",
   "haven_app_wallet_text": "Dompet luar biasa untuk Haven",
-  "hbar_extra_info": "Harap jangan lupa untuk menentukan ID memo saat mengirim transaksi HBAR untuk pertukaran",
   "help": "bantuan",
   "hidden_addresses": "Alamat tersembunyi",
   "hidden_balance": "Saldo Tersembunyi",
@@ -712,7 +712,6 @@
   "restore_wallet_restore_description": "Deskripsi pemulihan dompet",
   "robinhood_option_description": "Beli dan transfer secara instan menggunakan kartu debit, rekening bank, atau saldo robinhood Anda. Hanya AS.",
   "router_no_route": "Tidak ada rute yang ditentukan untuk ${name}",
-  "rune_extra_info": "Tolong jangan lupa untuk menentukan ID memo saat mengirim transaksi rune untuk pertukaran",
   "save": "Simpan",
   "save_backup_password": "Pastikan Anda telah menyimpan kata sandi cadangan Anda. Anda tidak akan dapat mengimpor file cadangan Anda tanpa itu.",
   "save_backup_password_alert": "Simpan kata sandi cadangan",
@@ -722,7 +721,6 @@
   "scan_qr_code": "Scan kode QR untuk mendapatkan alamat",
   "scan_qr_code_to_get_address": "Pindai kode QR untuk mendapatkan alamat",
   "scan_qr_on_device": "Pindai kode QR ini di perangkat lain",
-  "scrt_extra_info": "Harap jangan lupa untuk menentukan ID memo saat mengirim transaksi SCRT untuk pertukaran",
   "search": "Cari",
   "search_add_token": "Cari / Tambahkan token",
   "search_category": "Cari kategori",
@@ -936,7 +934,6 @@
   "token_name": "Nama token misalnya: Tether",
   "token_symbol": "Simbol token misalnya: USDT",
   "tokenID": "PENGENAL",
-  "ton_extra_info": "Harap jangan lupa untuk menentukan ID memo saat mengirim transaksi ton untuk pertukaran",
   "tor_connection": "koneksi Tor",
   "tor_connection_timeout": "Tor Connection Timeout",
   "tor_experimental": "Ini adalah fitur eksperimental, tidak semua koneksi yang terbuat dari dukungan dompet kue untuk routing - beberapa koneksi dapat menggunakan clearnet, untuk sepenuhnya merutekan aplikasi lalu lintas menggunakan untuk mode VPN.",
@@ -1108,13 +1105,11 @@
   "widgets_seed": "Biji",
   "wouoldLikeToConnect": "ingin terhubung",
   "write_down_backup_password": "Silakan menuliskan kata sandi cadangan Anda, yang digunakan untuk impor file cadangan Anda.",
-  "xlm_extra_info": "Jangan lupa untuk menentukan ID Memo saat mengirim transaksi XLM untuk pertukaran",
   "xmr_available_balance": "Saldo Tersedia",
   "xmr_full_balance": "Saldo Penuh",
   "xmr_hidden": "Tersembunyi",
   "xmr_to_error": "XMR.TO error",
   "xmr_to_error_description": "Jumlah tidak valid. Batas maksimal 8 digit setelah koma",
-  "xrp_extra_info": "Jangan lupa untuk menentukan Tag Tujuan saat mengirim transaksi XRP untuk pertukaran",
   "yat": "Yat",
   "yat_address": "Alamat Yat",
   "yat_alert_content": "Pengguna Cake Wallet sekarang dapat mengirim dan menerima semua mata uang favorit mereka dengan nama pengguna berbasis emoji yang satu-of-a-kind.",
