--- a/res/values/strings_it.arb
+++ b/res/values/strings_it.arb
@@ -355,6 +355,7 @@
   "event": "Evento",
   "events": "Eventi",
   "exchange": "Scambio",
+  "exchange_extra_info": "Non dimenticare di specificare la memo o l'ID extra durante l'invio di questa transazione per lo scambio",
   "exchange_incorrect_current_wallet_for_xmr": "Se vuoi scambiare XMR dal tuo portafoglio Cake Wallet, devi prima passare al portafoglio Monero.",
   "exchange_new_template": "Nuovo modello",
   "exchange_provider_unsupported": "${providerName} non è più supportato!",
@@ -417,7 +418,6 @@
   "group_by_type": "Raggruppa per tipo",
   "haven_app": "Haven di Cake Wallet",
   "haven_app_wallet_text": "Portafoglio fantastico per Haven",
-  "hbar_extra_info": "Non dimenticare di specificare l'ID memo durante l'invio della transazione HBAR per lo scambio",
   "help": "aiuto",
   "hidden_addresses": "Indirizzi nascosti",
   "hidden_balance": "Saldo Nascosto",
@@ -710,7 +710,6 @@
   "restore_wallet_restore_description": "Descrizione recupero portafoglio",
   "robinhood_option_description": "Acquista e trasferisci istantaneamente utilizzando la carta di debito, il conto bancario o il saldo di Robinhood. Solo USA.",
   "router_no_route": "Nessun percorso definito per ${name}",
-  "rune_extra_info": "Non dimenticare di specificare l'ID memo durante l'invio della transazione rune per lo scambio",
   "save": "Salva",
   "save_backup_password": "Assicurati di aver salvato la password del tuo backup.  Senza questa non sarai in grado di importare i tuoi file di backup.",
   "save_backup_password_alert": "Salva password Backup",
@@ -720,7 +719,6 @@
   "scan_qr_code": "Scansiona il codice QR",
   "scan_qr_code_to_get_address": "Scansiona il codice QR per ottenere l'indirizzo",
   "scan_qr_on_device": "Scansiona questo codice QR su un altro dispositivo",
-  "scrt_extra_info": "Non dimenticare di specificare l'ID memo durante l'invio della transazione SCRT per lo scambio",
   "search": "Ricerca",
   "search_add_token": "Cerca / Aggiungi token",
   "search_category": "Categoria di ricerca",
@@ -934,7 +932,6 @@
   "token_name": "Nome del token, ad esempio: Tether",
   "token_symbol": "Simbolo del token, ad esempio: USDT",
   "tokenID": "ID",
-  "ton_extra_info": "Non dimenticare di specificare l'ID memo durante l'invio della transazione Ton per lo scambio",
   "tor_connection": "Connessione Tor",
   "tor_connection_timeout": "Timeout di connessione TOR",
   "tor_experimental": "Questa è una funzionalità sperimentale, non tutte le connessioni realizzate con il supporto per il portafoglio di torta per routing - alcune connessioni possono utilizzare ClearNet, al fine di instradare completamente il traffico di app per l'uso del traffico con la modalità VPN.",
@@ -1108,13 +1105,11 @@
   "widgets_seed": "Seme",
   "wouoldLikeToConnect": "vorrei connettermi",
   "write_down_backup_password": "Trascrivi la password del backup, che è usata per importare i tuoi file di backup.",
-  "xlm_extra_info": "Ricorda di indicare il Memo ID quando invii la transazione XLM per lo scambio",
   "xmr_available_balance": "Saldo Disponibile",
   "xmr_full_balance": "Saldo Totale",
   "xmr_hidden": "Nascosto",
   "xmr_to_error": "Errore XMR.TO",
   "xmr_to_error_description": "Importo invalido. Il limite massimo è 8 cifre dopo il punto decimale",
-  "xrp_extra_info": "Ricorda di indicare il Tag di Destinazione quando invii una transazione XRP per lo scambio",
   "yat": "Yat",
   "yat_address": "Indirizzo Yat",
   "yat_alert_content": "Gli utenti di Cake Wallet possono ora inviare e ricevere tutte le loro valute preferite con un nome utente unico basato su emoji.",
