--- a/res/values/strings_ko.arb
+++ b/res/values/strings_ko.arb
@@ -355,6 +355,7 @@
   "event": "이벤트",
   "events": "이벤트",
   "exchange": "교환",
+  "exchange_extra_info": "교환을 위해이 거래를 보내는 동안 메모 또는 추가 ID를 지정하는 것을 잊지 마십시오.",
   "exchange_incorrect_current_wallet_for_xmr": "Cake Wallet 모네로 잔액에서 XMR을 스왑하려면 먼저 모네로 지갑으로 전환하세요.",
   "exchange_new_template": "새 템플릿",
   "exchange_provider_unsupported": "${providerName}은(는) 더 이상 지원되지 않습니다!",
@@ -417,7 +418,6 @@
   "group_by_type": "유형별 그룹화",
   "haven_app": "Haven by Cake Wallet",
   "haven_app_wallet_text": "Haven을 위한 멋진 지갑",
-  "hbar_extra_info": "교환을 위해 HBAR 트랜잭션을 보내는 동안 메모 ID를 지정하는 것을 잊지 마십시오.",
   "help": "도움말",
   "hidden_addresses": "숨겨진 주소",
   "hidden_balance": "숨겨진 잔액",
@@ -710,7 +710,6 @@
   "restore_wallet_restore_description": "지갑 복구 설명",
   "robinhood_option_description": "직불 카드, 은행 계좌 또는 Robinhood 잔액을 사용하여 즉시 구매 및 이체. 미국 전용.",
   "router_no_route": "${name}에 대해 정의된 경로 없음",
-  "rune_extra_info": "교환을 위해 룬 거래를 보내는 동안 메모 ID를 지정하는 것을 잊지 마십시오.",
   "save": "저장",
   "save_backup_password": "백업 비밀번호를 저장했는지 확인하세요. 없으면 백업 파일을 가져올 수 없습니다.",
   "save_backup_password_alert": "백업 비밀번호 저장",
@@ -720,7 +719,6 @@
   "scan_qr_code": "QR 코드 스캔",
   "scan_qr_code_to_get_address": "주소를 얻으려면 QR 코드를 스캔하세요",
   "scan_qr_on_device": "다른 기기에서 이 QR 코드 스캔",
-  "scrt_extra_info": "교환을 위해 SCRT 거래를 보내는 동안 메모 ID를 지정하는 것을 잊지 마십시오.",
   "search": "검색",
   "search_add_token": "토큰 검색 / 추가",
   "search_category": "카테고리 검색",
@@ -934,7 +932,6 @@
   "token_name": "토큰 이름 (예: Tether)",
   "token_symbol": "토큰 심볼 (예: USDT)",
   "tokenID": "ID",
-  "ton_extra_info": "교환을 위해 TON 트랜잭션을 보내는 동안 메모 ID를 지정하는 것을 잊지 마십시오.",
   "tor_connection": "Tor 연결",
   "tor_connection_timeout": "Tor 연결 시간 초과",
   "tor_experimental": "이것은 케이크 지갑 지원 Tor 라우팅으로 만든 모든 연결을 실험적인 기능입니다. 일부 연결은 Clearnet을 사용할 수 있습니다.",
@@ -1106,13 +1103,11 @@
   "widgets_seed": "시드",
   "wouoldLikeToConnect": "연결하고 싶습니다",
   "write_down_backup_password": "백업 파일 가져오기에 사용되는 백업 비밀번호를 적어두세요.",
-  "xlm_extra_info": "교환을 위해 XLM 트랜잭션을 보낼 때 메모 ID를 지정하는 것을 잊지 마세요.",
   "xmr_available_balance": "사용 가능 잔액",
   "xmr_full_balance": "전체 잔액",
   "xmr_hidden": "숨김",
   "xmr_to_error": "XMR.TO 오류",
   "xmr_to_error_description": "잘못된 금액입니다. 소수점 이하 최대 8자리",
-  "xrp_extra_info": "교환을 위해 XRP 트랜잭션을 보낼 때 목적지 태그를 지정하는 것을 잊지 마세요.",
   "yat": "Yat",
   "yat_address": "Yat 주소",
   "yat_alert_content": "Cake Wallet 사용자는 이제 고유한 이모지 기반 사용자 이름으로 좋아하는 모든 통화를 보내고 받을 수 있습니다.",
