--- a/res/values/strings_pl.arb
+++ b/res/values/strings_pl.arb
@@ -355,6 +355,7 @@
   "event": "Wydarzenie",
   "events": "Wydarzenia",
   "exchange": "Giełda",
+  "exchange_extra_info": "Nie zapomnij określić notatki lub dodatkowego identyfikatora podczas wysyłania tej transakcji na giełdę",
   "exchange_incorrect_current_wallet_for_xmr": "Jeśli chcesz zamienić XMR z salda Monero, najpierw przejdź na portfel Monero.",
   "exchange_new_template": "Nowy szablon wymiany",
   "exchange_provider_unsupported": "${providerName} nie jest już obsługiwany!",
@@ -417,7 +418,6 @@
   "group_by_type": "Grupa według typu",
   "haven_app": "Haven by Cake Wallet",
   "haven_app_wallet_text": "Awesome wallet for Haven",
-  "hbar_extra_info": "Nie zapomnij określić identyfikatora notatki podczas wysyłania transakcji HBAR dla wymiany",
   "help": "pomoc",
   "hidden_addresses": "Ukryte adresy",
   "hidden_balance": "Ukryte saldo",
@@ -709,7 +709,6 @@
   "restore_wallet_restore_description": "Przywracanie portfela",
   "robinhood_option_description": "Kup i przenieś natychmiast za pomocą karty debetowej, konta bankowego lub salda Robinhood. Tylko USA.",
   "router_no_route": "Brak zdefiniowanej trasy dla ${name}",
-  "rune_extra_info": "Nie zapomnij określić identyfikatora notatki podczas wysyłania transakcji rune dla giełdy",
   "save": "Zapisz",
   "save_backup_password": "Upewnij się, że zapisałeś swoje hasło kopii zapasowej. Bez tego nie będziesz mógł zaimportować pliku kopii zapasowej.",
   "save_backup_password_alert": "Zapisz hasło kopii zapasowej",
@@ -719,7 +718,6 @@
   "scan_qr_code": "Skanowania QR code",
   "scan_qr_code_to_get_address": "Zeskanuj kod QR, aby uzyskać adres",
   "scan_qr_on_device": "Zeskanuj ten kod QR na innym urządzeniu",
-  "scrt_extra_info": "Nie zapomnij określić identyfikatora notatki podczas wysyłania transakcji SCRT dla wymiany",
   "search": "Szukaj",
   "search_add_token": "Wyszukaj / Dodaj token",
   "search_category": "Kategoria wyszukiwania",
@@ -933,7 +931,6 @@
   "token_name": "Nazwa tokena, np.: Tether",
   "token_symbol": "Symbol tokena np.: USDT",
   "tokenID": "ID",
-  "ton_extra_info": "Nie zapomnij określić identyfikatora notatki podczas wysyłania transakcji TON dla wymiany",
   "tor_connection": "Połączenie przez Tor",
   "tor_connection_timeout": "Tor Connection Timeout",
   "tor_experimental": "Jest to funkcja eksperymentalna. Nie wszystkie połączenia wykonane z Cake Wallet korzystają z Tor, niektóre połączenia mogą korzystać z Clearnet, aby w pełni przekierować ruch skorzystaj z Tor w trybie VPN.",
@@ -1105,13 +1102,11 @@
   "widgets_seed": "Seed",
   "wouoldLikeToConnect": "chciałbym się połączyć",
   "write_down_backup_password": "Zapisz swoje hasło kopii zapasowej, które jest używane do importowania plików kopii zapasowych.",
-  "xlm_extra_info": "Nie zapomnij podać dodatkowego identyfikatora (memo) podczas wysyłania transakcji XLM do wymiany",
   "xmr_available_balance": "Dostępne środki",
   "xmr_full_balance": "Pełne saldo",
   "xmr_hidden": "Ukryte",
   "xmr_to_error": "Błąd XMR.TO",
   "xmr_to_error_description": "Nieprawidłowa kwota. Maksymalny limit to 8 cyfr po przecinku",
-  "xrp_extra_info": "Nie zapomnij podać tagu docelowego podczas wysyłania transakcji XRP do wymiany",
   "yat": "Yat",
   "yat_address": "Adres Yat",
   "yat_alert_content": "Użytkownicy Cake Wallet mogą teraz wysyłać i odbierać wszystkie swoje ulubione waluty za pomocą jedynej w swoim rodzaju nazwy użytkownika opartej na emoji.",
