--- a/res/values/strings_pt.arb
+++ b/res/values/strings_pt.arb
@@ -355,6 +355,7 @@
   "event": "Evento",
   "events": "Eventos",
   "exchange": "Intercâmbio",
+  "exchange_extra_info": "Por favor, não se esqueça de especificar o memorando ou o ID extra ao enviar esta transação para a troca",
   "exchange_incorrect_current_wallet_for_xmr": "Se você deseja trocar o XMR do balanço da carteira de bolo, mude para a sua carteira Monero primeiro.",
   "exchange_new_template": "Novo modelo",
   "exchange_provider_unsupported": "${providerName} não é mais suportado!",
@@ -417,7 +418,6 @@
   "group_by_type": "Grupo por tipo",
   "haven_app": "Haven by Cake Wallet",
   "haven_app_wallet_text": "Awesome wallet for Haven",
-  "hbar_extra_info": "Por favor, não se esqueça de especificar o ID do memorando ao enviar a transação HBAR para a troca",
   "help": "ajuda",
   "hidden_addresses": "Endereços ocultos",
   "hidden_balance": "Saldo escondido",
@@ -711,7 +711,6 @@
   "restore_wallet_restore_description": "Restauração da carteira",
   "robinhood_option_description": "Compre e transfira instantaneamente usando seu cartão de débito, conta bancária ou saldo de Robinhood. EUA apenas.",
   "router_no_route": "Nenhuma rota definida para ${name}",
-  "rune_extra_info": "Não se esqueça de especificar o ID do memorando ao enviar a transação da Rune para a troca",
   "save": "Salvar",
   "save_backup_password": "Certifique-se de que salvou sua senha de backup. Você não poderá importar seus arquivos de backup sem ele.",
   "save_backup_password_alert": "Salvar senha de backup",
@@ -721,7 +720,6 @@
   "scan_qr_code": "Escanear código QR",
   "scan_qr_code_to_get_address": "Digitalize o código QR para obter o endereço",
   "scan_qr_on_device": "Digitalize este código QR em outro dispositivo",
-  "scrt_extra_info": "Não se esqueça de especificar o ID do memorando ao enviar a transação SCRT para a troca",
   "search": "Procurar",
   "search_add_token": "Pesquisar / Adicionar token",
   "search_category": "Categoria de pesquisa",
@@ -935,7 +933,6 @@
   "token_name": "Nome do token, por exemplo: Tether",
   "token_symbol": "Símbolo de token, por exemplo: USDT",
   "tokenID": "EU IA",
-  "ton_extra_info": "Não se esqueça de especificar o ID do memorando ao enviar a transação TON para a troca",
   "tor_connection": "Conexão Tor",
   "tor_connection_timeout": "Tor de tempo limite da conexão",
   "tor_experimental": "Esse é um recurso experimental, nem todas as conexões feitas com o suporte para o suporte para a carteira de bolo - algumas conexões podem usar o ClearNet, a fim de rotear totalmente o tráfego de aplicativos TOR com o modo VPN.",
@@ -1108,13 +1105,11 @@
   "widgets_seed": "Semente",
   "wouoldLikeToConnect": "gostaria de me conectar",
   "write_down_backup_password": "Anote sua senha de backup, que será usada para importar seus arquivos de backup.",
-  "xlm_extra_info": "Não se esqueça de especificar o Memo ID ao enviar a transação XLM para a troca",
   "xmr_available_balance": "Saldo disponível",
   "xmr_full_balance": "Saldo total",
   "xmr_hidden": "Esconder saldo",
   "xmr_to_error": "Erro XMR.TO",
   "xmr_to_error_description": "Montante inválido. Limite máximo de 8 dígitos após o ponto decimal",
-  "xrp_extra_info": "Não se esqueça de especificar a etiqueta de destino ao enviar a transação XRP para a troca",
   "yat": "Yat",
   "yat_address": "Endereço Yat",
   "yat_alert_content": "Os usuários da Cake Wallet agora podem enviar e receber todas as suas moedas favoritas com um nome de usuário baseado em emoji único.",
