--- a/res/values/strings_ru.arb
+++ b/res/values/strings_ru.arb
@@ -355,6 +355,7 @@
   "event": "Событие",
   "events": "События",
   "exchange": "Обмен",
+  "exchange_extra_info": "Пожалуйста, не забудьте указать меморандум или дополнительный идентификатор при отправке этой транзакции для обмена",
   "exchange_incorrect_current_wallet_for_xmr": "Если вы хотите поменять XMR с баланса с кошельком для торта Monero, сначала переключитесь на свой кошелек Monero.",
   "exchange_new_template": "Новый шаблон",
   "exchange_provider_unsupported": "${providerName} больше не поддерживается!",
@@ -417,7 +418,6 @@
   "group_by_type": "Группа по типу",
   "haven_app": "Haven by Cake Wallet",
   "haven_app_wallet_text": "Awesome wallet for Haven",
-  "hbar_extra_info": "Пожалуйста, не забудьте указать идентификатор записки при отправке транзакции HBAR для обмена",
   "help": "помощь",
   "hidden_addresses": "Скрытые адреса",
   "hidden_balance": "Скрытый баланс",
@@ -710,7 +710,6 @@
   "restore_wallet_restore_description": "Описание восстановления кошелька",
   "robinhood_option_description": "Покупайте и перенесите мгновенно, используя свою дебетовую карту, банковский счет или баланс Robinhood. Только США.",
   "router_no_route": "Не установлен маршрут для ${name}",
-  "rune_extra_info": "Пожалуйста, не забудьте указать идентификатор записки при отправке рунической транзакции для обмена",
   "save": "Сохранить",
   "save_backup_password": "Убедитесь, что вы сохранили пароль резервной копии. Без него вы не сможете импортировать файлы резервных копий.",
   "save_backup_password_alert": "Сохранить пароль резервной копии",
@@ -720,7 +719,6 @@
   "scan_qr_code": "Сканировать QR-код",
   "scan_qr_code_to_get_address": "Отсканируйте QR-код для получения адреса",
   "scan_qr_on_device": "Отсканируйте этот QR-код на другом устройстве",
-  "scrt_extra_info": "Пожалуйста, не забудьте указать идентификатор записки при отправке транзакции SCRT для обмена",
   "search": "Поиск",
   "search_add_token": "Поиск / Добавить токен",
   "search_category": "Категория поиска",
@@ -934,7 +932,6 @@
   "token_name": "Имя токена, например: Tether",
   "token_symbol": "Символ токена, например: USDT",
   "tokenID": "ИДЕНТИФИКАТОР",
-  "ton_extra_info": "Пожалуйста, не забудьте указать идентификатор записки при отправке TON транзакции для обмена",
   "tor_connection": "Тор соединение",
   "tor_connection_timeout": "TOR Timeout",
   "tor_experimental": "Это экспериментальная функция, а не все соединения, сделанные из поддержки TOR для торта - некоторые подключения могут использовать ClearNet, чтобы полностью маршрутироваться с использованием трафика приложений в режиме VPN.",
@@ -1106,13 +1103,11 @@
   "widgets_seed": "Мнемоническая фраза",
   "wouoldLikeToConnect": "хотел бы подключиться",
   "write_down_backup_password": "Запишите пароль резервной копии, который используется для импорта файлов резервных копий.",
-  "xlm_extra_info": "Не забудьте указать Memo ID (памятка) при отправке транзакции XLM для обмена",
   "xmr_available_balance": "Доступный баланс",
   "xmr_full_balance": "Весь баланс",
   "xmr_hidden": "Скрыто",
   "xmr_to_error": "Ошибка XMR.TO",
   "xmr_to_error_description": "Недопустимая сумма. Максимум 8 цифр после десятичной точки",
-  "xrp_extra_info": "Не забудьте указать целевой тег при отправке транзакции XRP для обмена",
   "yat": "Yat",
   "yat_address": "Yat адрес",
   "yat_alert_content": "Пользователи Cake Wallet теперь могут отправлять и получать криптовалюту при помощи уникального имени пользователя на основе эмодзи.",
