--- a/res/values/strings_tr.arb
+++ b/res/values/strings_tr.arb
@@ -355,6 +355,7 @@
   "event": "Etkinlik",
   "events": "Olaylar",
   "exchange": "Değişme",
+  "exchange_extra_info": "Bu işlemi borsaya gönderirken lütfen notu veya ekstra kimliği belirtmeyi unutmayın.",
   "exchange_incorrect_current_wallet_for_xmr": "XMR'yi kek cüzdanı Monero bakiyenizden değiştirmek istiyorsanız, lütfen önce Monero cüzdanınıza geçin.",
   "exchange_new_template": "Yeni şablon",
   "exchange_provider_unsupported": "${providerName} artık desteklenmiyor!",
@@ -417,7 +418,6 @@
   "group_by_type": "Türüne göre grup",
   "haven_app": "Cake Wallet tarafından Haven",
   "haven_app_wallet_text": "Haven için harika cüzdan ",
-  "hbar_extra_info": "Lütfen Borsa için HBAR işlemini gönderirken not kimliğini belirtmeyi unutmayın.",
   "help": "yardım",
   "hidden_addresses": "Gizli adresler",
   "hidden_balance": "Gizli Bakiye",
@@ -709,7 +709,6 @@
   "restore_wallet_restore_description": "Cüzdan geri döndürme açıklaması",
   "robinhood_option_description": "Banka kartınızı, banka hesabınızı veya Robinhood bakiyenizi kullanarak anında satın alın ve aktarın. Sadece ABD.",
   "router_no_route": "${name} için rota tanımlanmadı",
-  "rune_extra_info": "Lütfen Borsa için Rune işlemini gönderirken not kimliğini belirtmeyi unutmayın",
   "save": "Kaydet",
   "save_backup_password": "Lütfen yedekleme parolanı kaydettiğinden emin ol.  Bu parola olmadan yedekleme dosyasını içe aktaramazsın.",
   "save_backup_password_alert": "Yedek parolasını kaydet",
@@ -719,7 +718,6 @@
   "scan_qr_code": "QR kodunu tarayın",
   "scan_qr_code_to_get_address": "Adresi getirmek için QR kodunu tara",
   "scan_qr_on_device": "Bu QR kodunu başka bir cihazda tarayın",
-  "scrt_extra_info": "Lütfen değişim için SCRT işlemini gönderirken not kimliğini belirtmeyi unutmayın.",
   "search": "Arat",
   "search_add_token": "Belirteç Ara / Ekle",
   "search_category": "Kategori ara",
@@ -933,7 +931,6 @@
   "token_name": "Belirteç adı, örneğin: Tether",
   "token_symbol": "Jeton sembolü, örneğin: USDT",
   "tokenID": "İD",
-  "ton_extra_info": "Lütfen değişim için ton işlemini gönderirken not kimliğini belirtmeyi unutmayın",
   "tor_connection": "Tor bağlantısı",
   "tor_connection_timeout": "Tor bağlantı zaman aşımı",
   "tor_experimental": "Bu deneysel bir özelliktir, kek cüzdanı desteğinden yapılan tüm bağlantılar değil, TOR yönlendirmesinden yapılmıştır - bazı bağlantılar, VPN moduyla uygulama trafik kullanımını tam olarak yönlendirmek için ClearNet kullanabilir.",
@@ -1105,13 +1102,11 @@
   "widgets_seed": "Tohum",
   "wouoldLikeToConnect": "bağlanmak istiyorum",
   "write_down_backup_password": "Lütfen yedekleme dosyasının içe aktarılması için kullanılan yedekleme parolanı not et.",
-  "xlm_extra_info": "Lütfen takas için XLM işlemi gönderirken Memo ID'yi belirtmeyi unutmayın",
   "xmr_available_balance": "Kullanılabilir Bakiye",
   "xmr_full_balance": "Tüm Bakiye",
   "xmr_hidden": "Gizli",
   "xmr_to_error": "XMR.TO hatası",
   "xmr_to_error_description": "Geçersiz tutar. Ondalık noktadan sonra maksimum limit 8 basamaktır",
-  "xrp_extra_info": "Lütfen takas için XRP işlemi gönderirken Hedef Etiketi (Destination Tag) belirtmeyi unutmayın",
   "yat": "Yat",
   "yat_address": "Yat adresi",
   "yat_alert_content": "Cake Wallet kullanıcıları artık tüm favori koin birimlerini benzersiz emoji tabanlı kullanıcı adıyla gönderebilir ve alabilirler.",
