--- a/res/values/strings_yo.arb
+++ b/res/values/strings_yo.arb
@@ -356,6 +356,7 @@
   "event": "Iṣẹlẹ",
   "events": "Awọn iṣẹlẹ",
   "exchange": "Paarọ",
+  "exchange_extra_info": "Jọwọ maṣe gbagbe lati tokasi akọsilẹ tabi id afikun lakoko ti o nfi iṣowo yii fun paṣipaarọ naa",
   "exchange_incorrect_current_wallet_for_xmr": "Ti o ba fẹ lati yi XMR lati dọgba oyinbo oyinbo kekere rẹ ti a fi omi ṣan rẹ, jọwọ yipada si apamọwọ Monrou akọkọ.",
   "exchange_new_template": "Àwòṣe títun",
   "exchange_provider_unsupported": "${providerName} ko ni atilẹyin mọ!",
@@ -418,7 +419,6 @@
   "group_by_type": "Ẹgbẹ nipasẹ Iru",
   "haven_app": "Haven latí ọwọ́ Cake Wallet",
   "haven_app_wallet_text": "Àpamọ́wọ́ Haven wà pa",
-  "hbar_extra_info": "Jọwọ maṣe gbagbe lati tokasi ID akọsilẹ lakoko fifiranṣẹ idunadura HBAR fun paṣipaarọ naa",
   "help": "ìranlọ́wọ́",
   "hidden_addresses": "Awọn adirẹsi ti o farapamọ",
   "hidden_balance": "Ìyókù owó dídé",
@@ -710,7 +710,6 @@
   "restore_wallet_restore_description": "Ìṣapẹrẹ mú àpamọ́wọ́ padà",
   "robinhood_option_description": "Ra ati Gbe lesekese lilo kaadi debiti rẹ, akọọlẹ banki, tabi iwọntunwọnsi robinrere. USA nikan.",
   "router_no_route": "Ọ̀nà kò sí fún ${name}",
-  "rune_extra_info": "Jọwọ maṣe gbagbe lati tokasi ID akọsilẹ lakoko fifiranṣẹ idunadura fun paṣipaarọ naa",
   "save": "Pamọ́",
   "save_backup_password": "Ẹ jọ̀wọ́ dájú pé ẹ ti pamọ́ ọ̀rọ̀ aṣínà ti ẹ̀dà nípamọ́ yín. Ti ẹ kò bá ni í, ẹ kò lè ṣí àwọn àkọsílẹ̀ nípamọ́ yín.",
   "save_backup_password_alert": "Pamọ́ ọ̀rọ̀ aṣínà ti ẹ̀dà",
@@ -720,7 +719,6 @@
   "scan_qr_code": "Yan QR koodu",
   "scan_qr_code_to_get_address": "Ṣayẹwo koodu QR naa lati gba adirẹsi naa",
   "scan_qr_on_device": "Ṣe ayẹwo koodu QR yii lori ẹrọ miiran",
-  "scrt_extra_info": "Jọwọ maṣe gbagbe lati tokasi ID akọsilẹ lakoko fifiranṣẹ idunadura ti o nwọle fun paṣipaarọ naa",
   "search": "Wá",
   "search_add_token": "Wa / Fi àmi kun",
   "search_category": "Wá nínú ẹgbẹ́",
@@ -934,7 +932,6 @@
   "token_name": "Orukọ àmi fun apẹẹrẹ: Tether",
   "token_symbol": "Aami aami fun apẹẹrẹ: USDT",
   "tokenID": "ID",
-  "ton_extra_info": "Jọwọ maṣe gbagbe lati tokasi ID akọsilẹ lakoko fifiranṣẹ idunadura pupọ fun paṣipaarọ naa",
   "tor_connection": "Tor asopọ",
   "tor_connection_timeout": "Akoko asopọ asopọ",
   "tor_experimental": "Eyi jẹ ẹya ti esiperimenta ti a ṣe lati awọn Awoṣe Adwat atilẹyin ti o wa ni atilẹyin idiwọ - diẹ ninu awọn asopọ le lo imple, lati le ni ipa ọna App Prat pẹlu ipo VPN.",
@@ -1106,13 +1103,11 @@
   "widgets_seed": "Hóró",
   "wouoldLikeToConnect": "yoo fẹ lati sopọ",
   "write_down_backup_password": "Ẹ jọ̀wọ́ ẹ̀dà ọ̀rọ̀ aṣínà ti ẹ̀dà nípamọ́ yín tó máa ń bá yín ṣí àkọsílẹ̀ yín l'ẹ kọ sílẹ̀.",
-  "xlm_extra_info": "Ẹ jọ̀wọ́ ẹ kò gbàgbé pèsè àmì ìdánimọ̀ àkọsílẹ̀ t'ẹ́ ń bá ránṣẹ́ pàṣípààrọ̀ ti XLM yín sí ilé ìfowóṣòwò",
   "xmr_available_balance": "Owó tó wà ḿbí",
   "xmr_full_balance": "Ìyókù owó",
   "xmr_hidden": "Bìbò",
   "xmr_to_error": "XMR.To aṣiṣe",
   "xmr_to_error_description": "Iye ti ko wulo. Iwọn to pọju 8 nọmba lẹhin aaye eleemewa",
-  "xrp_extra_info": "Ẹ jọ̀wọ́ ẹ kò gbàgbé pèsè orúkọ̀ àdírẹ́sì ti a ránṣẹ́ sí t'ẹ́ bá ránṣẹ pàṣípààrọ̀ ti XRP yín sílé ìfowóṣòwò",
   "yat": "Yat",
   "yat_address": "Àdírẹ́sì Yat",
   "yat_alert_content": "Àwọn olùṣàmúlò ti Cake Wallet lè fi orúkọ olùṣàmúlò t'á dá lórí emójì tó kì í jọra ránṣẹ́ àti gba gbogbo àwọn irú owó tíwọn yàn láàyò lọ́wọ́lọ́wọ́.",
