--- a/res/values/strings_ar.arb
+++ b/res/values/strings_ar.arb
@@ -355,6 +355,7 @@
   "event": "ﺙﺪﺣ",
   "events": "ﺙﺍﺪﺣﻷ﻿ﺍ",
   "exchange": "تبادل",
+  "exchange_extra_info": "يرجى عدم نسيان تحديد المذكرة أو معرف إضافي أثناء إرسال هذه المعاملة للتبادل",
   "exchange_incorrect_current_wallet_for_xmr": "إذا كنت ترغب في تبديل XMR من رصيد محفظة الكعكة ، فيرجى التبديل إلى محفظة Monero أولاً.",
   "exchange_new_template": "قالب جديد",
   "exchange_provider_unsupported": "${providerName} لم يعد مدعومًا!",
@@ -417,7 +418,6 @@
   "group_by_type": "مجموعة حسب النوع",
   "haven_app": "Haven بواسطة Cake Wallet",
   "haven_app_wallet_text": "محفظة رائعة ل Haven",
-  "hbar_extra_info": "من فضلك لا تنس تحديد معرف المذكرة أثناء إرسال معاملة HBAR للتبادل",
   "help": "مساعده",
   "hidden_addresses": "العناوين المخفية",
   "hidden_balance": "الميزان الخفي",
@@ -709,7 +709,6 @@
   "restore_wallet_restore_description": "وصف استعادة المحفظة",
   "robinhood_option_description": "شراء وتحويل على الفور باستخدام بطاقة الخصم الخاصة بك أو حسابك المصرفي أو رصيد Robinhood. الولايات المتحدة الأمريكية فقط.",
   "router_no_route": "لم يتم تحديد مسار لـ ${name}",
-  "rune_extra_info": "يرجى عدم نسيان تحديد معرف المذكرة أثناء إرسال معاملة Rune للتبادل",
   "save": "حفظ",
   "save_backup_password": "يرجى التأكد من حفظ كلمة المرور الاحتياطية. لن تتمكن من استيراد ملفات النسخ الاحتياطي بدونها.",
   "save_backup_password_alert": "حفظ كلمة المرور الاحتياطية",
@@ -719,7 +718,6 @@
   "scan_qr_code": "امسح رمز QR ضوئيًا",
   "scan_qr_code_to_get_address": "امسح ال QR للحصول على العنوان",
   "scan_qr_on_device": "                           ﺮﺧﺁ ﺯﺎﻬﺟ ﻰﻠﻋ ﺎﻴًﺋﻮﺿ ﺍﺬﻫ ﺔﻌﻳﺮﺴﻟﺍ ﺔﺑﺎﺠﺘﺳﻻ﻿ﺍ ﺰﻣﺭ ﺢﺴﻤﺑ ﻢﻗ",
-  "scrt_extra_info": "يرجى عدم نسيان تحديد معرف المذكرة أثناء إرسال معاملة SCRT للتبادل",
   "search": "بحث",
   "search_add_token": "بحث / إضافة رمز",
   "search_category": "فئة البحث",
@@ -933,7 +931,6 @@
   "token_name": "اسم الرمز ، على سبيل المثال: Tether",
   "token_symbol": "رمز العملة ، على سبيل المثال: USDT",
   "tokenID": "ﻒﻳﺮﻌﺗ ﺔﻗﺎﻄﺑ",
-  "ton_extra_info": "يرجى عدم نسيان تحديد معرف المذكرة أثناء إرسال معاملة TON للتبادل",
   "tor_connection": "ﺭﻮﺗ ﻝﺎﺼﺗﺍ",
   "tor_connection_timeout": "Tor Torn Connection Timeout",
   "tor_experimental": "هذه ميزة تجريبية ، وليس جميع الاتصالات المصنوعة من توجيه Cake Wallet Support - قد تستخدم بعض الاتصالات ClearNet ، من أجل توجيه حركة المرور بشكل كامل باستخدام TOR مع وضع VPN.",
@@ -1105,13 +1102,11 @@
   "widgets_seed": "سييد",
   "wouoldLikeToConnect": "ﻝﺎﺼﺗﻻ﻿ﺍ ﻲﻓ ﺐﻏﺮﺗ",
   "write_down_backup_password": "يرجى كتابة كلمة المرور الاحتياطية الخاصة بك ، والتي يتم استخدامها لاستيراد ملفات النسخ الاحتياطي الخاصة بك.",
-  "xlm_extra_info": "من فضلك لا تنس تحديد معرّف المذكرة أثناء إرسال معاملة XLM للتبادل",
   "xmr_available_balance": "الرصيد المتوفر",
   "xmr_full_balance": "الرصيد الكامل",
   "xmr_hidden": "مختفي",
   "xmr_to_error": "خطأ XMR.TO",
   "xmr_to_error_description": "مبلغ غير صحيح. الحد الأقصى 8 أرقام بعد الفاصلة العشرية",
-  "xrp_extra_info": "من فضلك لا تنس تحديد علامة الوجهة أثناء إرسال معاملة XRP للتبادل",
   "yat": "Yat",
   "yat_address": "عنوان Yat",
   "yat_alert_content": "يمكن لمستخدمي Cake Wallet الآن إرسال واستلام جميع عملاتهم المفضلة باستخدام اسم مستخدم فريد من نوعه قائم على الرموز التعبيرية.",
