--- a/res/values/strings_de.arb
+++ b/res/values/strings_de.arb
@@ -355,6 +355,7 @@
   "event": "Ereignis",
   "events": "Veranstaltungen",
   "exchange": "Tauschen",
+  "exchange_extra_info": "Bitte vergessen Sie nicht, das Memo oder die zusätzliche ID anzugeben, während Sie diese Transaktion für den Austausch senden",
   "exchange_incorrect_current_wallet_for_xmr": "Wenn Sie XMR aus Ihrem Cake Wallet Monero-Saldo tauschen möchten, wechseln Sie zuerst zu Ihrer Monero-Wallet.",
   "exchange_new_template": "Neue Vorlage",
   "exchange_provider_unsupported": "${providerName} wird nicht mehr unterstützt!",
@@ -417,7 +418,6 @@
   "group_by_type": "Gruppe nach Typ",
   "haven_app": "Haven von Cake Wallet",
   "haven_app_wallet_text": "Eine großartige Wallet für Haven",
-  "hbar_extra_info": "Bitte vergessen Sie nicht, die Memo -ID anzugeben, während Sie die HBAR -Transaktion für den Austausch senden",
   "help": "hilfe",
   "hidden_addresses": "Versteckte Adressen",
   "hidden_balance": "Verstecktes Guthaben",
@@ -710,7 +710,6 @@
   "restore_wallet_restore_description": "Beschreibung zur Wallet-Wiederherstellung",
   "robinhood_option_description": "Kaufen und übertragen Sie sofort mit Ihrem Debitkarten-, Bankkonto- oder Robinhood-Guthaben. Nur USA.",
   "router_no_route": "Keine Route definiert für ${name}",
-  "rune_extra_info": "Bitte vergessen Sie nicht, die Memo -ID anzugeben, während Sie die Rune -Transaktion für den Austausch senden",
   "save": "Speichern",
   "save_backup_password": "Bitte stellen Sie sicher, dass Sie Ihr Sicherungskennwort gespeichert haben. Ohne dieses können Sie Ihre Sicherungsdateien nicht importieren.",
   "save_backup_password_alert": "Sicherungskennwort speichern",
@@ -720,7 +719,6 @@
   "scan_qr_code": "QR-Code scannen",
   "scan_qr_code_to_get_address": "Scannen Sie den QR-Code, um die Adresse zu erhalten",
   "scan_qr_on_device": "Scannen Sie diesen QR-Code auf einem anderen Gerät",
-  "scrt_extra_info": "Bitte vergessen Sie nicht, die Memo -ID anzugeben, während Sie die SCRT -Transaktion für den Austausch senden",
   "search": "Suche",
   "search_add_token": "Token suchen / hinzufügen",
   "search_category": "Suchkategorie",
@@ -934,7 +932,6 @@
   "token_name": "Token-Name, z. B.: Tether",
   "token_symbol": "Token-Symbol, z. B.: USDT",
   "tokenID": "AUSWEIS",
-  "ton_extra_info": "Bitte vergessen Sie nicht, die Memo -ID anzugeben, während Sie die TON -Transaktion für den Austausch senden",
   "tor_connection": "Tor-Verbindung",
   "tor_connection_timeout": "TOR -Verbindungs ​​-Zeitüberschreitung",
   "tor_experimental": "Dies ist eine experimentelle Funktion, nicht alle Verbindungen, die aus Kuchen -Wallet -Stütze für die Routing hergestellt werden. Einige Verbindungen können ClearNET verwenden, um den App -Traffic -App -TOR mit dem VPN -Modus vollständig zu verwenden.",
@@ -1108,13 +1105,11 @@
   "widgets_seed": "Seed",
   "wouoldLikeToConnect": "möchte mich gerne vernetzen",
   "write_down_backup_password": "Bitte notieren Sie sich Ihr Sicherungskennwort, das für den Import Ihrer Sicherungsdateien gebraucht wird.",
-  "xlm_extra_info": "Bitte vergessen Sie nicht, die Memo-ID anzugeben, während Sie die XLM-Transaktion für den Austausch senden",
   "xmr_available_balance": "Verfügbares Guthaben",
   "xmr_full_balance": "Gesamtguthaben",
   "xmr_hidden": "Versteckt",
   "xmr_to_error": "XMR.TO-Fehler",
   "xmr_to_error_description": "Ungültiger Betrag. Höchstgrenze 8 Stellen nach dem Dezimalpunkt",
-  "xrp_extra_info": "Bitte vergessen Sie nicht, das Ziel-Tag anzugeben, während Sie die XRP-Transaktion für den Austausch senden",
   "yat": "Yat",
   "yat_address": "Yat-Adresse",
   "yat_alert_content": "Cake Wallet-Benutzer können jetzt alle ihre Lieblingswährungen mit einem einzigartigen Emoji-basierten Benutzernamen senden und empfangen.",
