--- a/res/values/strings_hi.arb
+++ b/res/values/strings_hi.arb
@@ -355,6 +355,7 @@
   "event": "आयोजन",
   "events": "आयोजन",
   "exchange": "अदला-बदली",
+  "exchange_extra_info": "कृपया एक्सचेंज के लिए इस लेनदेन को भेजते समय मेमो या अतिरिक्त आईडी निर्दिष्ट करना न भूलें",
   "exchange_incorrect_current_wallet_for_xmr": "यदि आप अपने केक वॉलेट मोनेरो बैलेंस से XMR को स्वैप करना चाहते हैं, तो कृपया पहले अपने मोनेरो वॉलेट पर स्विच करें।",
   "exchange_new_template": "नया टेम्पलेट",
   "exchange_provider_unsupported": "${providerName} अब समर्थित नहीं है!",
@@ -417,7 +418,6 @@
   "group_by_type": "प्रकार द्वारा समूह",
   "haven_app": "Haven by Cake Wallet",
   "haven_app_wallet_text": "Awesome wallet for Haven",
-  "hbar_extra_info": "कृपया एक्सचेंज के लिए HBAR लेनदेन भेजते समय मेमो आईडी निर्दिष्ट करना न भूलें",
   "help": "मदद करना",
   "hidden_addresses": "छिपे हुए पते",
   "hidden_balance": "छिपा हुआ संतुलन",
@@ -711,7 +711,6 @@
   "restore_wallet_restore_description": "बटुआ विवरण पुनर्स्थापित करें",
   "robinhood_option_description": "अपने डेबिट कार्ड, बैंक खाते या रॉबिनहुड बैलेंस का उपयोग करके तुरंत खरीदें और स्थानांतरित करें। केवल यूएसए।",
   "router_no_route": "के लिए कोई मार्ग निर्धारित नहीं है ${name}",
-  "rune_extra_info": "कृपया एक्सचेंज के लिए RUNE लेनदेन भेजते समय मेमो आईडी निर्दिष्ट करना न भूलें",
   "save": "बचाना",
   "save_backup_password": "कृपया सुनिश्चित करें कि आपने अपना बैकअप पासवर्ड सहेज लिया है। आप इसके बिना अपनी बैकअप फ़ाइलों को आयात नहीं कर पाएंगे।",
   "save_backup_password_alert": "बैकअप पासवर्ड सेव करें",
@@ -721,7 +720,6 @@
   "scan_qr_code": "स्कैन क्यू आर कोड",
   "scan_qr_code_to_get_address": "पता प्राप्त करने के लिए QR कोड स्कैन करें",
   "scan_qr_on_device": "इस QR कोड को किसी अन्य डिवाइस पर स्कैन करें",
-  "scrt_extra_info": "कृपया एक्सचेंज के लिए SCRT लेनदेन भेजते समय मेमो आईडी निर्दिष्ट करना न भूलें",
   "search": "खोज",
   "search_add_token": "खोजें/टोकन जोड़ें",
   "search_category": "खोज श्रेणी",
@@ -935,7 +933,6 @@
   "token_name": "टोकन नाम जैसे: टीथर",
   "token_symbol": "टोकन प्रतीक जैसे: यूएसडीटी",
   "tokenID": "पहचान",
-  "ton_extra_info": "कृपया एक्सचेंज के लिए टन लेनदेन भेजते समय मेमो आईडी निर्दिष्ट करना न भूलें",
   "tor_connection": "टोर कनेक्शन",
   "tor_connection_timeout": "टोर कनेक्शन टाइमआउट",
   "tor_experimental": "यह एक प्रायोगिक विशेषता है, केक वॉलेट सपोर्ट टोर रूटिंग से किए गए सभी कनेक्शन नहीं - कुछ कनेक्शन क्लीयरनेट का उपयोग कर सकते हैं, ताकि वीपीएन मोड के साथ ऐप ट्रैफिक का उपयोग पूरी तरह से रूट करने के लिए हो।",
@@ -1107,13 +1104,11 @@
   "widgets_seed": "बीज",
   "wouoldLikeToConnect": "जुड़ना चाहेंगे",
   "write_down_backup_password": "कृपया अपना बैकअप पासवर्ड लिखें, जिसका उपयोग आपकी बैकअप फ़ाइलों के आयात के लिए किया जाता है।",
-  "xlm_extra_info": "एक्सचेंज के लिए XLM ट्रांजेक्शन भेजते समय मेमो आईडी निर्दिष्ट करना न भूलें",
   "xmr_available_balance": "उपलब्ध शेष राशि",
   "xmr_full_balance": "पूरा संतुलन",
   "xmr_hidden": "छिपा हुआ",
   "xmr_to_error": "XMR.TO त्रुटि",
   "xmr_to_error_description": "अवैध राशि। दशमलव बिंदु के बाद अधिकतम सीमा 8 अंक",
-  "xrp_extra_info": "एक्सचेंज के लिए एक्सआरपी लेनदेन भेजते समय कृपया गंतव्य टैग निर्दिष्ट करना न भूलें",
   "yat": "Yat",
   "yat_address": "Yat पता",
   "yat_alert_content": "Cake Wallet उपयोगकर्ता अब अपनी सभी पसंदीदा मुद्राओं को एक-एक तरह के इमोजी-आधारित उपयोगकर्ता नाम के साथ भेज और प्राप्त कर सकते हैं।",
