--- a/res/values/strings_hr.arb
+++ b/res/values/strings_hr.arb
@@ -355,6 +355,7 @@
   "event": "Događaj",
   "events": "Događaji",
   "exchange": "Razmjena",
+  "exchange_extra_info": "Ne zaboravite navesti dopis ili dodatni ID dok šaljete ovu transakciju na razmjenu",
   "exchange_incorrect_current_wallet_for_xmr": "Ako želite zamijeniti XMR iz vašeg novčanika za kolač Monero, prvo se prebacite na svoj novčanik Monero.",
   "exchange_new_template": "Novi predložak",
   "exchange_provider_unsupported": "${providerName} više nije podržan!",
@@ -417,7 +418,6 @@
   "group_by_type": "Grupirati",
   "haven_app": "Haven by Cake Wallet",
   "haven_app_wallet_text": "Awesome wallet for Haven",
-  "hbar_extra_info": "Ne zaboravite navesti ID Memoa dok šaljete HBAR transakciju na razmjenu",
   "help": "pomozite",
   "hidden_addresses": "Skrivene adrese",
   "hidden_balance": "Skriven iznos",
@@ -709,7 +709,6 @@
   "restore_wallet_restore_description": "Opis oporavka novčanika",
   "robinhood_option_description": "Kupite i prebacite odmah pomoću svoje debitne kartice, bankovnog računa ili robinhood salda. Samo SAD.",
   "router_no_route": "Nije definirana ruta za ${name}",
-  "rune_extra_info": "Ne zaboravite navesti ID memorandu",
   "save": "Spremi",
   "save_backup_password": "Molimo pobrinite se da spremite svoju lozinku za sigurnosnu kopiju. Bez nje nećete moći uvesti datoteke sigurnosne kopije.",
   "save_backup_password_alert": "Spremi lozinku za sigurnosnu kopiju",
@@ -719,7 +718,6 @@
   "scan_qr_code": "Skenirajte QR kod",
   "scan_qr_code_to_get_address": "Skeniraj QR kod za dobivanje adrese",
   "scan_qr_on_device": "Skenirajte ovaj QR kod na drugom uređaju",
-  "scrt_extra_info": "Ne zaboravite navesti ID Memoa dok šaljete SCRT transakciju za razmjenu",
   "search": "Traži",
   "search_add_token": "Traži / Dodaj token",
   "search_category": "Kategorija pretraživanja",
@@ -933,7 +931,6 @@
   "token_name": "Naziv tokena npr.: Tether",
   "token_symbol": "Simbol tokena npr.: USDT",
   "tokenID": "iskaznica",
-  "ton_extra_info": "Ne zaboravite navesti ID memorandu",
   "tor_connection": "Tor veza",
   "tor_connection_timeout": "TOR TIMPOUCEN",
   "tor_experimental": "Ovo je eksperimentalna značajka, nisu sve veze napravljene od podrške za kolače za torte - neke veze mogu koristiti ClearNet, kako bi se u potpunosti usmjerio na APP promet s TOR -om s VPN načinom rada.",
@@ -1105,13 +1102,11 @@
   "widgets_seed": "pristupnog izraza",
   "wouoldLikeToConnect": "želio bi se povezati",
   "write_down_backup_password": "Molimo zapišite svoju lozinku za sigurnosnu kopiju koja se koristi za uvoz datoteka sigurnosne kopije.",
-  "xlm_extra_info": "Molimo ne zaboravite navesti memo ID prilikom slanja XLM transakcije na razmjenu",
   "xmr_available_balance": "Raspoloživ iznos",
   "xmr_full_balance": "Ukupan iznos",
   "xmr_hidden": "Sakriven",
   "xmr_to_error": "XMR.TO greška",
   "xmr_to_error_description": "Nevažeći iznos. Dopušteno je najviše 8 znamenki iza točke",
-  "xrp_extra_info": "Molimo ne zaboravite navesti odredišnu oznaku prilikom slanja XRP transakcije na razmjenu",
   "yat": "Yat",
   "yat_address": "Yat adresa",
   "yat_alert_content": "Korisnici Cake Wallet sada mogu slati i primati sve svoje omiljene valute s jedinstvenim korisničkim imenom na temelju emojija.",
