--- a/res/values/strings_hy.arb
+++ b/res/values/strings_hy.arb
@@ -355,6 +355,7 @@
   "event": "Իրադարձություն",
   "events": "Իրադարձություններ",
   "exchange": "Փոխանակում",
+  "exchange_extra_info": "Խնդրում ենք մի մոռացեք նշել հուշագիրը կամ լրացուցիչ ID- ն, այս գործարքը փոխանակման համար ուղարկելիս",
   "exchange_incorrect_current_wallet_for_xmr": "Եթե ​​ցանկանում եք փոխանակել XMR ձեր տորթի դրամապանակից Monero Relandal- ից, խնդրում ենք նախ անցնել ձեր Monero դրամապանակին:",
   "exchange_new_template": "Նոր տեսակ",
   "exchange_provider_unsupported": "${providerName} այլևս չի ապահովվում",
@@ -417,7 +418,6 @@
   "group_by_type": "Խմբավորել ըստ տեսակի",
   "haven_app": "Haven ծրագիր",
   "haven_app_wallet_text": "Հիանալի հաշվեհամար Haven համար",
-  "hbar_extra_info": "Խնդրում ենք մի մոռացեք նշել MEMO ID- ն, մի ընթացքում HBAR գործարքը փոխանակման համար ուղարկելիս",
   "help": "Օգնություն",
   "hidden_addresses": "Թաքնված հասցեներ",
   "hidden_balance": "Թաքնված մնացորդ",
@@ -708,7 +708,6 @@
   "restore_wallet_restore_description": "Դրամապանակի վերականգնման նկարագրություն",
   "robinhood_option_description": "Գնեք և տեղափոխեք ակնթարթորեն ձեր դեբետային քարտով, բանկային հաշվով կամ Robinhood հաշվեկշռով։ Միայն ԱՄՆ-ում։",
   "router_no_route": "Ոչ մի երթուղի չի սահմանված ${name}",
-  "rune_extra_info": "Խնդրում ենք մի մոռացեք նշել MEMO ID- ն, միաժամանակ փոխանակման համար RUNE գործարքը ուղարկելիս",
   "save": "Պահպանել",
   "save_backup_password": "Խնդրում ենք հաստատել, որ դուք պահպանել եք ձեր կրկնօրինակի գաղտնաբառը։ Դուք չեք կարող ներմուծել ձեր կրկնօրինակ ֆայլերը առանց դրա։",
   "save_backup_password_alert": "Պահպանել կրկնօրինակի գաղտնաբառը",
@@ -718,7 +717,6 @@
   "scan_qr_code": "Սկանավորել QR կոդ",
   "scan_qr_code_to_get_address": "Սկանավորել QR կոդը հասցեն ստանալու համար",
   "scan_qr_on_device": "Սկանավորել այս QR կոդը այլ սարքի վրա",
-  "scrt_extra_info": "Խնդրում ենք մի մոռացեք նշել MEMO ID- ն `SCRT գործարքը փոխանակման համար ուղարկելիս",
   "search": "Որոնել",
   "search_add_token": "Որոնել / Ավելացնել token",
   "search_category": "Որոնել կատեգորիա",
@@ -931,7 +929,6 @@
   "token_name": "Token-ի անուն, օրինակ՝ Tether",
   "token_symbol": "Token-ի նշան, օրինակ՝ USDT",
   "tokenID": "ID",
-  "ton_extra_info": "Խնդրում ենք մի մոռացեք նշել MEMO ID- ն, երբ փոխանակման համար տոննա գործարքը ուղարկեք",
   "tor_connection": "Tor կապ",
   "tor_connection_timeout": "Tor կապի ժամկետ",
   "tor_experimental": "Սա փորձարարական առանձնահատկություն է, ոչ բոլոր կապերը տորթ դրամապանակների աջակցության համար",
@@ -1103,13 +1100,11 @@
   "widgets_seed": "Սերմ",
   "wouoldLikeToConnect": "ցանկանում է միանալ",
   "write_down_backup_password": "Խնդրում ենք գրանցել ձեր կրկնօրինակի գաղտնաբառը, որը օգտագործվում է կրկնօրինակ ֆայլերի ներմուծման համար։",
-  "xlm_extra_info": "Խնդրում ենք չմոռանալ նշել Memo ID-ն երբ ուղարկում եք XLM գործարք փոխանակման համար",
   "xmr_available_balance": "Հասանելի մնացորդ",
   "xmr_full_balance": "Լրիվ մնացորդ",
   "xmr_hidden": "Թաքնված",
   "xmr_to_error": "XMR.TO սխալ",
   "xmr_to_error_description": "Սխալ գումար։ Առավելագույն սահմանը 8 թվանշան է կետից հետո",
-  "xrp_extra_info": "Խնդրում ենք չմոռանալ նշել Destination Tag-ը երբ ուղարկում եք XRP գործարք փոխանակման համար",
   "yat": "Yat",
   "yat_address": "Yat Հասցե",
   "yat_alert_content": "Cake Wallet-ի օգտատերերը այժմ կարող են ուղարկել և ստանալ իրենց սիրած արժույթները emoji-ների հիման վրա օգտագործվող անունով։",
