--- a/res/values/strings_ja.arb
+++ b/res/values/strings_ja.arb
@@ -355,6 +355,7 @@
   "event": "イベント",
   "events": "イベント",
   "exchange": "交換",
+  "exchange_extra_info": "Exchangeのためにこのトランザクションを送信する際に、メモまたは追加IDを指定することを忘れないでください",
   "exchange_incorrect_current_wallet_for_xmr": "XMRをケーキウォレットモネロバランスから交換したい場合は、最初にMoneroウォレットに切り替えてください。",
   "exchange_new_template": "新しいテンプレート",
   "exchange_provider_unsupported": "${providerName}はサポートされなくなりました！",
@@ -418,7 +419,6 @@
   "group_by_type": "タイプごとにグループ",
   "haven_app": "Haven by Cake Wallet",
   "haven_app_wallet_text": "Awesome wallet for Haven",
-  "hbar_extra_info": "ExchangeのHBARトランザクションを送信しながら、メモIDを指定することを忘れないでください",
   "help": "ヘルプ",
   "hidden_addresses": "隠されたアドレス",
   "hidden_balance": "隠れたバランス",
@@ -710,7 +710,6 @@
   "restore_wallet_restore_description": "ウォレットの復元",
   "robinhood_option_description": "デビットカード、銀行口座、またはロビンフッドバランスを使用して、即座に購入して転送します。アメリカのみ。",
   "router_no_route": "ルートが定義されていません ${name}",
-  "rune_extra_info": "ExchangeのRuneトランザクションを送信しながら、メモIDを指定することを忘れないでください",
   "save": "セーブ",
   "save_backup_password": "バックアップパスワードが保存されていることを確認してください。 それなしではバックアップファイルをインポートすることはできません。",
   "save_backup_password_alert": "バックアップパスワードを保存する",
@@ -720,7 +719,6 @@
   "scan_qr_code": "QRコードをスキャン",
   "scan_qr_code_to_get_address": "QRコードをスキャンして住所を取得します",
   "scan_qr_on_device": "別のデバイスでこの QR コードをスキャンします",
-  "scrt_extra_info": "ExchangeのSCRTトランザクションを送信しながら、メモIDを指定することを忘れないでください",
   "search": "検索",
   "search_add_token": "トークンの検索/追加",
   "search_category": "検索カテゴリ",
@@ -934,7 +932,6 @@
   "token_name": "トークン名 例: Tether",
   "token_symbol": "トークンシンボル 例: USDT",
   "tokenID": "ID",
-  "ton_extra_info": "Exchangeのトントランザクションを送信しながら、メモIDを指定することを忘れないでください",
   "tor_connection": "Tor接続",
   "tor_connection_timeout": "TOR接続タイムアウト",
   "tor_experimental": "これは実験的な機能であり、ケーキウォレットサポートTORルーティングから作成されたすべての接続ではありません。一部の接続では、APPトラフィックをVPNモードで完全にルーティングするために、ClearNetを使用する場合があります。",
@@ -1106,13 +1103,11 @@
   "widgets_seed": "シード",
   "wouoldLikeToConnect": "接続したいです",
   "write_down_backup_password": "バックアップファイルのインポートに使用されるバックアップパスワードを書き留めてください。",
-  "xlm_extra_info": "交換用のXLMトランザクションを送信するときに、メモIDを指定することを忘れないでください",
   "xmr_available_balance": "利用可能残高",
   "xmr_full_balance": "フルバランス",
   "xmr_hidden": "非表示",
   "xmr_to_error": "XMR.TOエラー",
   "xmr_to_error_description": "金額が無効です。 小数点以下8桁の上限",
-  "xrp_extra_info": "取引所のXRPトランザクションを送信するときに、宛先タグを指定することを忘れないでください",
   "yat": "Yat",
   "yat_address": "Yat住所",
   "yat_alert_content": "Cake Walletユーザーは、独自の絵文字ベースのユーザー名を使用して、お気に入りのすべての通貨を送受信できるようになりました。",
