--- a/res/values/strings_nl.arb
+++ b/res/values/strings_nl.arb
@@ -355,6 +355,7 @@
   "event": "Evenement",
   "events": "Evenementen",
   "exchange": "Aandelenbeurs",
+  "exchange_extra_info": "Vergeet niet om de memo of extra ID op te geven tijdens het verzenden van deze transactie voor de uitwisseling",
   "exchange_incorrect_current_wallet_for_xmr": "Als je XMR uit je cake -portemonnee Monero -balans wilt ruilen, schakel dan eerst over naar je Monero -portemonnee.",
   "exchange_new_template": "Nieuwe sjabloon",
   "exchange_provider_unsupported": "${providerName} wordt niet langer ondersteund!",
@@ -417,7 +418,6 @@
   "group_by_type": "Groep voor type",
   "haven_app": "Haven by Cake Wallet",
   "haven_app_wallet_text": "Awesome wallet for Haven",
-  "hbar_extra_info": "Vergeet niet om de memo -ID op te geven tijdens het verzenden van de HBAR -transactie voor de uitwisseling",
   "help": "helpen",
   "hidden_addresses": "Verborgen adressen",
   "hidden_balance": "Verborgen balans",
@@ -709,7 +709,6 @@
   "restore_wallet_restore_description": "Portemonnee-herstelbeschrijving",
   "robinhood_option_description": "Koop en zet direct over op uw bankpas, bankrekening of Robinhood -saldo. Alleen VS.",
   "router_no_route": "Geen route gedefinieerd voor ${name}",
-  "rune_extra_info": "Vergeet niet om de memo -ID op te geven tijdens het verzenden van de rune -transactie voor de uitwisseling",
   "save": "Opslaan",
   "save_backup_password": "Zorg ervoor dat u uw reservewachtwoord heeft opgeslagen. Zonder dit kunt u uw back-upbestanden niet importeren.",
   "save_backup_password_alert": "Bewaar back-upwachtwoord",
@@ -719,7 +718,6 @@
   "scan_qr_code": "Scan QR-code",
   "scan_qr_code_to_get_address": "Scan de QR-code om het adres te krijgen",
   "scan_qr_on_device": "Scan deze QR-code op een ander apparaat",
-  "scrt_extra_info": "Vergeet niet om de memo -ID op te geven tijdens het verzenden van de SCRT -transactie voor de uitwisseling",
   "search": "Zoekopdracht",
   "search_add_token": "Token zoeken / toevoegen",
   "search_category": "Zoek categorie",
@@ -933,7 +931,6 @@
   "token_name": "Tokennaam bijv.: Tether",
   "token_symbol": "Tokensymbool bijv.: USDT",
   "tokenID": "ID kaart",
-  "ton_extra_info": "Vergeet niet om de memo -ID op te geven tijdens het verzenden van de ton -transactie voor de uitwisseling",
   "tor_connection": "Tor-verbinding",
   "tor_connection_timeout": "Tor -verbindingstime -out",
   "tor_experimental": "Dit is een experimentele functie, niet alle verbindingen gemaakt van Cake Wallet Support Tor Routing - Sommige verbindingen kunnen ClearNet gebruiken, om app -verkeer volledig te routeren Tor met VPN -modus.",
@@ -1106,13 +1103,11 @@
   "widgets_seed": "Zaad",
   "wouoldLikeToConnect": "wil graag verbinden",
   "write_down_backup_password": "Noteer uw back-upwachtwoord, dat wordt gebruikt voor het importeren van uw back-upbestanden.",
-  "xlm_extra_info": "Vergeet niet om de Memo-ID op te geven tijdens het verzenden van de XLM-transactie voor de uitwisseling",
   "xmr_available_balance": "Beschikbaar saldo",
   "xmr_full_balance": "Volledig saldo",
   "xmr_hidden": "Verborgen",
   "xmr_to_error": "XMR.TO-fout",
   "xmr_to_error_description": "Ongeldige hoeveelheid. Maximaal 8 cijfers achter de komma",
-  "xrp_extra_info": "Vergeet niet om de Destination Tag op te geven tijdens het verzenden van de XRP-transactie voor de uitwisseling",
   "yat": "Yat",
   "yat_address": "Yat-adres",
   "yat_alert_content": "Cake Wallet-gebruikers kunnen nu al hun favoriete valuta's verzenden en ontvangen met een unieke emoji-gebaseerde gebruikersnaam.",
