--- a/res/values/strings_th.arb
+++ b/res/values/strings_th.arb
@@ -355,6 +355,7 @@
   "event": "เหตุการณ์",
   "events": "กิจกรรม",
   "exchange": "แลกเปลี่ยน",
+  "exchange_extra_info": "โปรดอย่าลืมระบุบันทึกหรือรหัสพิเศษในขณะที่ส่งธุรกรรมนี้สำหรับการแลกเปลี่ยน",
   "exchange_incorrect_current_wallet_for_xmr": "หากคุณต้องการสลับ XMR จาก Cake Wallet Monero Balance โปรดเปลี่ยนไปใช้กระเป๋าเงิน Monero ก่อน",
   "exchange_new_template": "เทมเพลทใหม่",
   "exchange_provider_unsupported": "${providerName} ไม่ได้รับการสนับสนุนอีกต่อไป!",
@@ -417,7 +418,6 @@
   "group_by_type": "กลุ่มตามประเภท",
   "haven_app": "Haven ของ Cake Wallet",
   "haven_app_wallet_text": "กระเป๋าสตางค์ที่สวยงามสำหรับ Haven",
-  "hbar_extra_info": "โปรดอย่าลืมระบุรหัสบันทึกในขณะที่ส่งธุรกรรม HBAR สำหรับการแลกเปลี่ยน",
   "help": "ช่วยเหลือ",
   "hidden_addresses": "ที่อยู่ที่ซ่อนอยู่",
   "hidden_balance": "ยอดคงเหลือซ่อนอยู่",
@@ -709,7 +709,6 @@
   "restore_wallet_restore_description": "คำอธิบายการกู้กระเป๋า",
   "robinhood_option_description": "ซื้อและโอนทันทีโดยใช้บัตรเดบิตบัญชีธนาคารหรือยอดคงเหลือของ Robinhood สหรัฐอเมริกาเท่านั้น",
   "router_no_route": "ไม่มีเส้นทางที่กำหนดไว้สำหรับ ${name}",
-  "rune_extra_info": "โปรดอย่าลืมระบุรหัสบันทึกในขณะที่ส่งธุรกรรมรูนสำหรับการแลกเปลี่ยน",
   "save": "บันทึก",
   "save_backup_password": "โปรดตรวจสอบให้แน่ใจว่าคุณได้บันทึกรหัสผ่านสำรองข้อมูลแล้ว คุณจะไม่สามารถนำเข้าไฟล์สำรองข้อมูลของคุณโดยไม่ใช้รหัสผ่านนั้น",
   "save_backup_password_alert": "บันทึกรหัสผ่านสำรอง",
@@ -719,7 +718,6 @@
   "scan_qr_code": "สแกนรหัส QR",
   "scan_qr_code_to_get_address": "สแกน QR code เพื่อรับที่อยู่",
   "scan_qr_on_device": "สแกนโค้ด QR นี้บนอุปกรณ์อื่น",
-  "scrt_extra_info": "โปรดอย่าลืมระบุรหัสบันทึกในขณะที่ส่งธุรกรรม SCRT สำหรับการแลกเปลี่ยน",
   "search": "ค้นหา",
   "search_add_token": "ค้นหา / เพิ่มโทเค็น",
   "search_category": "ค้นหาหมวดหมู่",
@@ -933,7 +931,6 @@
   "token_name": "ชื่อโทเค็น เช่น Tether",
   "token_symbol": "สัญลักษณ์โทเค็น เช่น USDT",
   "tokenID": "บัตรประจำตัวประชาชน",
-  "ton_extra_info": "โปรดอย่าลืมระบุรหัสบันทึกในขณะที่ส่งธุรกรรม TON สำหรับการแลกเปลี่ยน",
   "tor_connection": "การเชื่อมต่อทอร์",
   "tor_connection_timeout": "หมดเวลาเชื่อมต่อ tor",
   "tor_experimental": "นี่เป็นคุณสมบัติการทดลองไม่ใช่การเชื่อมต่อทั้งหมดที่ทำจากการรองรับเค้กกระเป๋าเงิน TOR การกำหนดเส้นทาง - การเชื่อมต่อบางอย่างอาจใช้ Clearnet เพื่อกำหนดเส้นทางการจราจรแอพใช้ TOR ด้วยโหมด VPN",
@@ -1105,13 +1102,11 @@
   "widgets_seed": "ซีด",
   "wouoldLikeToConnect": "ต้องการเชื่อมต่อ",
   "write_down_backup_password": "โปรดจดรหัสผ่านสำรองข้อมูลของคุณลงบนกระดาษ ซึ่งจะใช้ในการนำเข้าไฟล์สำรองข้อมูลของคุณ",
-  "xlm_extra_info": "โปรดอย่าลืมระบุ Memo ID ในขณะที่ส่งธุรกรรม XLM สำหรับการแลกเปลี่ยน",
   "xmr_available_balance": "ยอดคงเหลือที่สามารถใช้งานได้",
   "xmr_full_balance": "ยอดคงเหลือแบบเต็ม",
   "xmr_hidden": "ซ่อน",
   "xmr_to_error": "ข้อผิดพลาด XMR.TO",
   "xmr_to_error_description": "จำนวนไม่ถูกต้อง จำกัดขั้นสูง 8 หลักหลังจุดทศนิยม",
-  "xrp_extra_info": "โปรดอย่าลืมระบุ Destination Tag ในขณะที่ส่งธุรกรรม XRP สำหรับการแลกเปลี่ยน",
   "yat": "Yat",
   "yat_address": "ที่อยู่ Yat",
   "yat_alert_content": "ผู้ใช้งาน Cake Wallet สามารถส่งและรับเหรียญออนไลน์ทุกเหรียญที่ชื่นชอบของพวกเขาได้ง่ายขึ้นด้วยชื่อผู้ใช้งานที่พิเศษที่ระบุด้วยอีโมจิ",
