--- a/res/values/strings_uk.arb
+++ b/res/values/strings_uk.arb
@@ -355,6 +355,7 @@
   "event": "Подія",
   "events": "Події",
   "exchange": "Обмін",
+  "exchange_extra_info": "Не забудьте вказати пам’ятку або додатковий ідентифікатор під час надсилання цієї транзакції для обміну",
   "exchange_incorrect_current_wallet_for_xmr": "Якщо ви хочете поміняти XMR зі свого балансу для тортів Monero Balance, спочатку перейдіть на свій гаманець Monero.",
   "exchange_new_template": "Новий шаблон",
   "exchange_provider_unsupported": "${providerName} більше не підтримується!",
@@ -417,7 +418,6 @@
   "group_by_type": "Група за типом",
   "haven_app": "Haven by Cake Wallet",
   "haven_app_wallet_text": "Awesome wallet for Haven",
-  "hbar_extra_info": "Не забудьте вказати ідентифікатор пам’яті під час надсилання транзакції HBAR для обміну",
   "help": "допомога",
   "hidden_addresses": "Приховані адреси",
   "hidden_balance": "Прихований баланс",
@@ -710,7 +710,6 @@
   "restore_wallet_restore_description": "Опис відновлюваного гаманця",
   "robinhood_option_description": "Купуйте та перенесіть миттєво за допомогою дебетової картки, банківського рахунку або балансу Робінства. Тільки США.",
   "router_no_route": "Не встановлено маршрут для ${name}",
-  "rune_extra_info": "Не забудьте вказати ідентифікатор пам’яті під час надсилання транзакції RUE для обміну",
   "save": "Зберегти",
   "save_backup_password": "Переконайтеся, що ви зберегли свій пароль резервної копії. Без нього ви не зможете імпортувати файли резервних копій.",
   "save_backup_password_alert": "Зберегти пароль резервної копії",
@@ -720,7 +719,6 @@
   "scan_qr_code": "Відскануйте QR-код",
   "scan_qr_code_to_get_address": "Скануйте QR-код для одержання адреси",
   "scan_qr_on_device": "Відскануйте цей QR-код на іншому пристрої",
-  "scrt_extra_info": "Не забудьте вказати ідентифікатор пам’яті під час надсилання транзакції SCRT для обміну",
   "search": "Пошук",
   "search_add_token": "Пошук / Додати маркер",
   "search_category": "Категорія пошуку",
@@ -934,7 +932,6 @@
   "token_name": "Назва токена, наприклад: Tether",
   "token_symbol": "Символ маркера, наприклад: USDT",
   "tokenID": "ID",
-  "ton_extra_info": "Не забудьте вказати ідентифікатор пам’яті під час надсилання транзакції TON для обміну",
   "tor_connection": "Підключення Tor",
   "tor_connection_timeout": "Тайм -аут підключення TOR",
   "tor_experimental": "Це експериментальна функція, не всі з'єднання, зроблені з підтримки тортів, що підтримують маршрутизацію - деякі з'єднання можуть використовувати Clearnet, щоб повністю маршрутизувати трафік додатків, використовуючи TOR з режимом VPN.",
@@ -1106,13 +1103,11 @@
   "widgets_seed": "Мнемонічна фраза",
   "wouoldLikeToConnect": "хотів би підключитися",
   "write_down_backup_password": "Запишіть пароль резервної копії, який використовується для імпорту файлів резервних копій.",
-  "xlm_extra_info": "Будь ласка, не забудьте вказати ідентифікатор пам'ятки під час надсилання транзакції XLM для обміну",
   "xmr_available_balance": "Доступний баланс",
   "xmr_full_balance": "Весь баланс",
   "xmr_hidden": "Приховано",
   "xmr_to_error": "Помилка XMR.TO",
   "xmr_to_error_description": "Неприпустима сума. Максимум 8 цифр після десяткової коми",
-  "xrp_extra_info": "Будь ласка, не забудьте вказати тег призначення під час надсилання XRP-транзакції для обміну",
   "yat": "Yat",
   "yat_address": "Yat адреса",
   "yat_alert_content": "Користувачі Cake Wallet тепер можуть надсилати та отримувати криптовалюту за допомогою унікального імені користувача на основі смайликів.",
